# kagent

./: .gitignore  CLAUDE.md  README.md  config.yaml  leaderboard.md  pyproject.toml  train.py  viz.py
cfd-competition/kaggler/: CLAUDE-KAGGLER.md  KAGGLER_AGENT.md  README.md  data.py  predict.py  train.py
cfd-competition/organizer/: README.md  generate_manifest.py  prepare_splits.py  score.py  train.py
k8s/: entrypoint-kaggler.sh  entrypoint-organizer.sh  kaggler-deployment.yaml  launch.py  organizer-deployment.yaml  prepare-splits-job.yaml  train-job.yaml
kagent/: CLAUDE.md  data.py  predict.py  pyproject.toml  score.py
kagent/k8s/: entrypoint-kaggler.sh  entrypoint-organizer.sh  kaggler-deployment.yaml  launch.py  organizer-deployment.yaml  prepare-splits-job.yaml
